# capo

./: .README.md.swp  .gitignore  .pre-commit-config.yaml  README.md  citation.cff  pyproject.toml
CAPO/: capo.py  statistical_tests.py  task.py  templates.py  utils.py
capo/: callbacks.py  capo.py  evopromptga.py  load_datasets.py  opro.py  prompt.py  statistical_tests.py  task.py  templates.py  utils.py  visualizations.py
capo_de_capi/: task.py
configs/: base_config.py  experiment_configs.py
init_results/: gsm8ka.csv
logs/: benchmark_experiment_agnews_llama_CAPO_42-5078742.err  benchmark_experiment_agnews_llama_CAPO_43-5078743.err  benchmark_experiment_agnews_llama_CAPO_44-5078744.err  benchmark_experiment_agnews_llama_EvoPromptGA_42-5078739.err  benchmark_experiment_agnews_llama_EvoPromptGA_43-5078740.err  benchmark_experiment_agnews_llama_EvoPromptGA_44-5078741.err  benchmark_experiment_agnews_mistral_CAPO_42-5078754.err  benchmark_experiment_agnews_mistral_CAPO_43-5078755.err  benchmark_experiment_agnews_mistral_CAPO_44-5078756.err  benchmark_experiment_agnews_mistral_CAPO_alpha10-5077383.err  benchmark_experiment_agnews_mistral_CAPO_alpha10_long-5077410.err  benchmark_experiment_agnews_mistral_CAPO_co10-5077381.err  benchmark_experiment_agnews_mistral_CAPO_co10_long-5077408.err  benchmark_experiment_agnews_mistral_CAPO_default-5077378.err  benchmark_experiment_agnews_mistral_CAPO_default_long-5077405.err  benchmark_experiment_agnews_mistral_CAPO_default_long-5077782.err  benchmark_experiment_agnews_mistral_CAPO_lp1-5077380.err  (+469 more)
misc/: eval_all_command.txt  (+6 more)
(+3331 files in other folders)
