[tool.poetry]
name = "capo"
version = "0.1.0"
description = "Cost-aware prompt tuning algorithm"
authors = ["Tom Zehle, Moritz Schlager, Timo Heiß"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
promptolution = "^1.2.0"
numpy = "~1.26"
pandas = "^2.2.3"
scipy = "^1.15.2"
pyarrow = "^19.0.1"
fastparquet = "^2024.11.0"
huggingface-hub = "^0.29.2"

[tool.poetry.group.visualization.dependencies]
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"
